--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </section>
 
       <section class="photo nobg title" data-background="m/mit.jpg">
-        <h1>BSD 🐭 MIT 🐭 X11</h1>
+        <h1>BSD ☥ MIT ☥ X11</h1>
       </section>
 
       <section class="photo nobg title" data-background="m/art.jpg">
@@ -62,8 +62,13 @@
       </section>
 
       <section class="photo nobg title" data-background="m/musk.jpg">
-        <h4>WHAT IF ONLY ONE MAN</h4>
-        <h2>COULD GO TO SPACE?</h2>
+        <h3>☯ THE PARABLE OF ☯</h3>
+        <h2>THE MAN WHO WENT TO MARS</h2>
+      </section>
+
+      <section class="photo nobg title" data-background="m/force-choke.png">
+        <h3>☯ THE PARABLE OF ☯</h3>
+        <h2>THE MAN WHO WENT TO MARS</h2>
       </section>
 
       <section class="photo nobg title" data-background="m/revolution.jpg">
@@ -77,7 +82,7 @@
         <h1>REALLY MATTERS</h1>
       </section>
 
-      <section class="photo nobg title" data-background="m/belka.jpg">
+      <section class="photo nobg title" data-background="m/belka.png">
         <h4>IT'S THE</h4>
         <h2>KNOWLEDGE</h2>
         <h4>NOT THE</h4>
