Updated for jsconfbp.

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <h2>GENERAL PUBLIC LICENCE</h2>
       </section>
 
-      <section class="photo nobg title" data-background="m/oracle.jpg">
-        <h3>💵 HOW THE IDEA WENT 💵</h3>
-        <h1>MAINSTREAM</h1>
-      </section>
-
       <section class="photo nobg title" data-background="m/cathedral.jpg">
         <h2>THE CATHEDRAL</h2>
         <h4>☥ AND ☥</h4>
         <h2>THE BAZAAR</h2>
       </section>
 
+      <section class="photo nobg title" data-background="m/oracle.jpg">
+        <h3>💵 HOW THE IDEA WENT 💵</h3>
+        <h1>MAINSTREAM</h1>
+      </section>
+
       <section class="photo nobg title" data-background="m/mit.jpg">
-        <h1>BSD ☥ MIT ☥ X11</h1>
+        <h2>BSD 🐇 MIT</h2>
       </section>
 
       <section class="photo nobg title" data-background="m/art.jpg">
@@ -53,22 +53,7 @@
       </section>
 
       <section class="photo nobg title" data-background="m/greyskull.gif">
-        <h1>👊 AGENCY 👊</h1>
-      </section>
-
-      <section class="photo nobg title" data-background="m/force-choke.png">
-        <h4>IMAGINE A WORLD</h4>
-        <h2>WITHOUT OPEN SOURCE</h2>
-      </section>
-
-      <section class="photo nobg title" data-background="m/musk.jpg">
-        <h3>☯ THE PARABLE OF ☯</h3>
-        <h2>THE MAN WHO WENT TO MARS</h2>
-      </section>
-
-      <section class="photo nobg title" data-background="m/force-choke.png">
-        <h3>☯ THE PARABLE OF ☯</h3>
-        <h2>THE MAN WHO WENT TO MARS</h2>
+        <h2>👊 AGENCY 👊</h2>
       </section>
 
       <section class="photo nobg title" data-background="m/revolution.jpg">
@@ -77,9 +62,19 @@
         <h2 class="fragment">TO LEARN</h2>
       </section>
 
-      <section class="photo nobg title" data-background="m/dog-cat.jpg">
-        <h3>💞 HOW WE PROTECT IT 💞</h3>
-        <h1>REALLY MATTERS</h1>
+      <section class="photo nobg title" data-background="m/force-choke.png">
+        <h4>👔 IMAGINE A WORLD 👔</h4>
+        <h2>WITHOUT OPEN SOURCE</h2>
+      </section>
+
+      <section class="photo nobg title" data-background="m/musk.jpg">
+        <h3>🚀 THE PARABLE OF 🚀</h3>
+        <h2>THE MAN WHO WENT TO MARS</h2>
+      </section>
+
+      <section class="photo nobg title" data-background="m/force-choke.png">
+        <h3>🚀 THE PARABLE OF 🚀</h3>
+        <h2>THE MAN WHO WENT TO MARS</h2>
       </section>
 
       <section class="photo nobg title" data-background="m/belka.png">
@@ -87,6 +82,11 @@
         <h2>KNOWLEDGE</h2>
         <h4>NOT THE</h4>
         <h2>SOFTWARE</h2>
+      </section>
+
+      <section class="photo nobg title" data-background="m/dog-cat.jpg">
+        <h3>💞 HOW WE PROTECT IT 💞</h3>
+        <h1>REALLY MATTERS</h1>
       </section>
 
       <section class="photo nobg title" data-background="m/soviet-dog.jpg">
@@ -101,6 +101,11 @@
         <h2>CC SHARE-ALIKE</h2>
       </section>
 
+      <section class="photo nobg title" data-background="m/boat-cat.jpg">
+        <h4>CHEAT SHEET:</h4>
+        <h2>APACHE LICENCE</h2>
+      </section>
+
       <section class="photo nobg title" data-background="m/asshole-cat.jpg">
         <h3>OUR HEROES</h3>
         <h2>ARE IMPERFECT</h2>
@@ -111,7 +116,7 @@
         <h2>IS EVERYTHING</h2>
       </section>
 
-      <section class="photo nobg title" data-background="m/space-dog.gif">
+      <section class="photo nobg title" data-background="m/rocket-doge.gif">
         <h1>OK THANKS BYE</h1>
         <p><a href="https://twitter.com/bodil">@bodil</a></p>
         <p><a href="https://bodil.lol/join-us-now/">bodil.lol/join-us-now/</a></p>
